explicit directory changing

--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -19,14 +19,6 @@ jobs:
     steps:
       - name: Git Checkout main project
         uses: actions/checkout@v2
-        with:
-          path: main
-      - name: git checkout test project
-        uses: actions/checkout@v2
-        with:
-          repository: ahsNT/cbdg-maven-test
-          path: test-project
-      - run: ls -al
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
@@ -34,10 +26,13 @@ jobs:
           java-version: '14'
           cache: 'gradle'
       - name: Clean and Build with Gradle Wrapper
-        run: ./main/gradlew clean build
+        run: ./gradlew clean build
       - name: build and upload maven plugin
-        run: ./main/gradlew buildPluginDescriptor publishToMavenLocal
-      - name: change to test project
-        run: cd test-project
+        run: ./gradlew buildPluginDescriptor publishToMavenLocal
+      - name: git checkout test project
+        uses: actions/checkout@v2
+        with:
+          repository: ahsNT/cbdg-maven-test
+          path: test-project
       - name: build test project
-        run: mvn clean install
+        run: cd ./test-project; mvn clean install
