#36: Include image from maven parameter into output
Made image parameter optional
Added test image
Added image to default template

closing #36, #40

--- a/src/test/resources/pom.xml
+++ b/src/test/resources/pom.xml
@@ -20,6 +20,7 @@
                     <templateFile>src/test/resources/templates/test.ftl</templateFile>
                     <camundaBpmnDir>src/test/resources/bpmn</camundaBpmnDir>
                     <resultOutputDir>build/test-results/cbdg/html</resultOutputDir>
+                    <bpmnDiagramImageFile>src/test/resources/images/flowchart.png</bpmnDiagramImageFile>
                 </configuration>
             </plugin>
         </plugins>
