--- a/src/main/resources/META-INF/maven/plugin.xml
+++ b/src/main/resources/META-INF/maven/plugin.xml
@@ -25,6 +25,13 @@
 			<threadSafe>false</threadSafe>
 			<parameters>
 				<parameter>
+					<name>bpmnDiagramImageFile</name>
+					<type>java.io.File</type>
+					<required>false</required>
+					<editable>true</editable>
+					<description/>
+				</parameter>
+				<parameter>
 					<name>camundaBpmnDir</name>
 					<type>java.io.File</type>
 					<required>false</required>
@@ -47,6 +54,7 @@
 				</parameter>
 			</parameters>
 			<configuration>
+				<bpmnDiagramImageFile implementation="java.io.File">${bpmnDiagramImageFile}</bpmnDiagramImageFile>
 				<camundaBpmnDir implementation="java.io.File" default-value="${project.basedir}/src/main/resources/bpmn">${camundaBpmnDir}</camundaBpmnDir>
 				<resultOutputDir implementation="java.io.File" default-value="${project.build.directory}/cbdg/html">${resultOutputDir}</resultOutputDir>
 				<templateFile implementation="java.io.File" default-value="${project.build.directory}/classes/templates/default.ftl">${templateFile}</templateFile>
