#51: Provide a gradle plugin

--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           repository: NovatecConsulting/cbdg-maven-plugin
           path: cbdg-maven-plugin
+          ref: CBDG-51
       - name: build cbdg-maven-plugin
         run: cd ./cbdg-maven-plugin; mvn clean install
       - name: git checkout test project
@@ -44,5 +45,11 @@ jobs:
         with:
           repository: NovatecConsulting/cbdg-maven-test
           path: cbdg-maven-test
+          ref: CBDG-51
       - name: build cbdg-maven-test
         run: cd ./cbdg-maven-test; mvn clean install
+      - name: clean and build cbdg-test
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: clean build
+          build-root-directory: ./cbdg-maven-test
